--- a/css/style.css
+++ b/css/style.css
@@ -10,3 +10,145 @@
 ul, li, menu{
     list-style: none;
 }
+
+img{
+    max-width: 100%;
+}
+
+a{
+    text-decoration: none;
+    color: black;
+}
+
+
+/* Layout */
+
+header{
+    min-height: 100px;
+    background-color: tomato;
+}
+
+.container{
+    margin: 0 auto;
+    max-width: 1000px;
+}
+
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+    justify-content: space-between;
+}
+
+.col-3{
+    width: calc( 100% / 3);
+    padding: 5px;
+}
+
+
+
+.card-img{
+    position: relative;
+    display: block;
+}
+
+.brand{
+    color: rgb(101, 97, 97);
+    font-size: 12px;
+}
+
+.sustenible{
+    background-color: green;
+    color: white;
+    line-height: 20px;
+    padding: 5px;
+    position: absolute;
+    bottom: 10px;
+    left: 55px;
+    z-index: 1;
+}
+
+.sustenible-alone{
+    background-color: green;
+    color: white;
+    line-height: 20px;
+    padding: 5px;
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    z-index: 1;
+}
+
+.discount{
+    background-color: red;
+    color: white;
+    line-height: 20px;
+    padding: 5px;
+    position: absolute;
+    bottom: 10px;
+    left: 5px;
+    z-index: 1;
+}
+
+.heart{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 1;
+}
+
+.row.add-prd{
+    justify-content: center;
+    align-items: center;
+}
+
+
+.overlay{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: ease-in-out 500ms;
+}
+
+.add-prd{
+    background-color: tomato;
+    line-height: 20px;
+    border-radius: 20px;
+    padding: 5px;
+    z-index: 1;
+}
+
+.card-img:hover .overlay{
+    opacity: 1;
+    background-size: cover;
+    background-position: center;
+}
+
+.overlay-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-size: cover;
+    background-position: center;
+}
+
+
+
+.discount-price{
+    color: red;
+}
+
+.old-price{
+    text-decoration: line-through;
+}
+footer{
+    min-height: 100px;
+    background-color: black;
+    color: white;
+}
