compilazione fotter e suoi link

--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,35 @@ header{
     text-decoration: line-through;
 }
 footer{
-    min-height: 100px;
+    padding: 50px;
     background-color: black;
     color: white;
 }
+
+.col6.left h2{
+    padding: 0;
+}
+
+.foot-link{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 7px;
+    
+}
+
+.foot-link a{
+    color: rgb(204, 201, 201);
+    margin-top: 7px;
+}
+
+.foot-link a:hover{
+    color: tomato;
+}
+
+.social-link{
+    padding: 7px;
+}
+
+
+
+
