--- a/css/style.css
+++ b/css/style.css
@@ -77,9 +77,7 @@ header{
     
 }
 
-.gender-list li{
-    min-width: ;
-}
+
 
 .gender-list a:hover{
     color: white;
@@ -108,6 +106,11 @@ header{
 
 .icon img:hover{
    filter: invert(100%);
+}
+
+
+main{
+    padding-bottom: 120px;
 }
 
 .col-3{
